--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,20 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <!-- <link rel="icon" href="../src/assets/image/logoSite.png">
-    <link rel="icon" href="./folders/image/logoSite.png" type="image/png" />
-    <link rel="icon" href="./folders/image/logoSite.png" type="image/png" /> -->
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>خدمات گردشگری آهوان</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
-    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/vuex@2.0.0"></script>
+    <!-- slick -->
+    <!-- <link rel="stylesheet" href="../src/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="../src/slick/slick-theme.css" /> -->
   </head>
   <body>
     <noscript>
@@ -28,5 +29,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- <script type="text/javascript" src="../src/slick/slick.min.js"></script> -->
   </body>
 </html>
