--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css"
+      rel="stylesheet"
+    />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>خدمات گردشگری آهوان</title>
     <link
@@ -15,9 +18,37 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://unpkg.com/vuex@2.0.0"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-11034061729"
+    ></script>
     <!-- slick -->
     <!-- <link rel="stylesheet" href="../src/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="../src/slick/slick-theme.css" /> -->
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-WDJ566R");
+    </script>
+    <!-- End Google Tag Manager -->
+    <script type="text/javascript">
+      window.RAYCHAT_TOKEN = "508e083e-4f49-4e50-a2d4-be92972eedac";
+      (function () {
+        d = document;
+        s = d.createElement("script");
+        s.src = "https://widget-react.raychat.io/install/widget.js";
+        s.async = 1;
+        d.getElementsByTagName("head")[0].appendChild(s);
+      })();
+    </script>
   </head>
   <body>
     <noscript>
