--- a/public/index.html
+++ b/public/index.html
@@ -4,23 +4,42 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
     <link
       href="https://fonts.googleapis.com/css?family=Material+Icons"
       rel="stylesheet"
     />
+    <!-- <link
+      href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+      rel="stylesheet"
+    /> -->
+    <!-- <link
+      href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css"
+      rel="stylesheet"
+    /> -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>پریسا قاسمی</title>
+    <title>خدمات گردشگری آهوان</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
     />
+    <meta
+      meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
     <script src="https://unpkg.com/vuex@2.0.0"></script>
-    <!-- <script
+    <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=AW-11034061729"
-    ></script> -->
+    ></script>
+    <!-- slick -->
+    <!-- <link rel="stylesheet" href="../src/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="../src/slick/slick-theme.css" /> -->
     <!-- Google Tag Manager -->
-    <!-- <script>
+    <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
@@ -31,9 +50,9 @@
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-WDJ566R");
-    </script> -->
+    </script>
     <!-- End Google Tag Manager -->
-    <!-- <script type="text/javascript">
+    <script type="text/javascript">
       window.RAYCHAT_TOKEN = "508e083e-4f49-4e50-a2d4-be92972eedac";
       (function () {
         d = document;
@@ -42,16 +61,19 @@
         s.async = 1;
         d.getElementsByTagName("head")[0].appendChild(s);
       })();
-    </script> -->
+    </script>
   </head>
   <body>
-    <!-- <noscript>
+    <noscript>
       <strong
         >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
         properly without JavaScript enabled. Please enable it to
         continue.</strong
       >
-    </noscript> -->
+    </noscript>
     <div id="app"></div>
+    <!-- built files will be auto injected -->
+    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
+    <!-- <script type="text/javascript" src="../src/slick/slick.min.js"></script> -->
   </body>
 </html>
